# pizzaria-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/agents/: fastapi-architect.md  pizzaria-reviewer.md
.claude/skills/create-endpoint/: SKILL.md
.claude/skills/create-module/: SKILL.md
.claude/skills/fastapi-architect/: SKILL.md
.claude/skills/logger-config-performance/: SKILL.md
.claude/skills/logger-level-choice/: SKILL.md
.claude/skills/logger-message-structure/: SKILL.md
.claude/skills/pizzaria-reviewer/: SKILL.md
.claude/skills/prisma-migration/: SKILL.md
.claude/skills/pydantic-schema/: SKILL.md
.claude/skills/pytest-integration/: SKILL.md
.claude/skills/pytest-unit/: SKILL.md
.github/workflows/: ci.yml
docs/adr/: 0001-adotar-modular-monolith-em-camadas.md  0002-padroes-de-logging.md  0003-ids-uuid.md  0004-naming-com-prefixo-de-entidade.md
docs/architecture/: conventions.md  modular-monolith.md
src/: __main__.py  main.py
src/core/: config.py  exceptions.py  logger.py  middlewares.py  security.py  security_dependencies.py
src/infra/: database.py  redis_client.py  seed.py
src/infra/prisma/: schema.prisma
src/infra/prisma/migrations/20260515225542_init/: migration.sql
src/infra/prisma/migrations/20260521173558_init/: migration.sql
src/infra/prisma/migrations/20260526213743_/: migration.sql
src/infra/prisma/migrations/20260527165030_add_users_deleted_at_index/: migration.sql
src/infra/prisma/migrations/20260721192413_add_password_reset_tokens/: migration.sql
src/modules/auth/: auth_controller.py  auth_dependencies.py  auth_schema.py  auth_service.py  password_reset_token_repository.py
src/modules/health/: __init__.py  controller.py  dependencies.py  router.py  schema.py  service.py
src/modules/health/controllers/v1/: health.py  root.py
src/modules/users/: controller.py  dependencies.py  repository.py  router.py  schema.py  service.py  user_dependencies.py  user_repository.py  user_router.py  user_schema.py  user_service.py
src/modules/users/controllers/v1/: user_controller.py  users.py
src/shared/email/: email_dependencies.py  email_service.py
test/: conftest.py  test_config.py  test_exceptions.py  test_health.py
test/factories/: __init__.py  user_factory.py  users.py
test/integration/: conftest.py
test/integration/modules/auth/: test_auth_controller.py
test/integration/modules/health/: test_health_api.py
test/integration/modules/users/: test_auth_router.py  test_user_controller.py  test_users_api.py
test/unit/core/: test_config.py  test_exceptions.py  test_logger.py  test_security.py  test_security_dependencies.py
test/unit/infra/: test_seed.py
test/unit/modules/health/: test_service.py
test/unit/modules/health/controllers/v1/: test_health.py
test/unit/modules/users/: test_controller.py  test_schema.py  test_service.py  test_user_schema.py  test_user_service.py
test/unit/modules/users/controllers/v1/: test_user_controller.py  test_users.py
