[project]
name = "pizzaria-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "prisma>=0.15.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]


[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
